--- a/styles.css
+++ b/styles.css
@@ -134,3 +134,14 @@ h4{
 .colomn-4:hover{
     transform: translateY(-7px);
 }
+.offer{
+    background: radial-gradient(#69d3b0,#46d8a0);
+    margin-top: 70px;
+    padding: 30px 0;
+}
+.colomn-2 .offer-img{
+    padding: 50px;
+}
+small{
+    color: palevioletred);
+}
